# roblox-open-cloud-python

./: README.md  openapi-python-client.yaml  pyproject.toml
.github/workflows/: produce-library.yml  sync-with-roblox.yml
roblox_open_cloud_openapi/: __init__.py  client.py
roblox_open_cloud_openapi/api/accounts/: delete_v1_account_pin.py  get_v1_account_creation_metadata.py  get_v1_account_pin.py  get_v1_account_settings_account_country.py  get_v1_account_settings_metadata.py  get_v1_announcements.py  get_v1_announcements_metadata.py  get_v1_auth_metadata.py  get_v1_birthdate.py  get_v1_birthdateusers_roblox_com.py  get_v1_client_assertion.py  get_v1_description.py  get_v1_descriptionusers_roblox_com.py  get_v1_email.py  get_v1_emails.py  get_v1_games_multiget_playability_status.py  get_v1_gender.py  get_v1_genderusers_roblox_com.py  get_v1_messages.py  get_v1_messages_unread_count.py  get_v1_metadata.py  get_v1_metadatatwostepverification_roblox_com.py  (+158 more)
roblox_open_cloud_openapi/models/: __init__.py  accept_group_join_request_request.py  action_result.py  agent_response.py  agent_type.py  api_empty_response_model.py  asset.py  asset_action.py  asset_grant_request.py  asset_permissions_error.py  asset_permissions_error_code.py  asset_permissions_error_response.py  asset_privacy.py  asset_quota.py  asset_quota_asset_type.py  asset_quota_period.py  asset_quota_quota_type.py  asset_version.py  assets_create_asset_body.py  assets_rollback_asset_version_body.py  assets_update_asset_body.py  assign_role_group_membership_request.py  attribute_aggregation_function.py  audio_search_filters_type_0.py  batch_grant_permissions_request.py  batch_grant_permissions_response.py  breakdown_value.py  bulk_delete_saves_request_type_0.py  bulk_delete_saves_response_type_0.py  can_invite_user_response.py  client_status_get_request.py  client_status_set_request.py  cloud_flush_memory_store_scope.py  cloud_generate_user_thumbnail_format.py  cloud_generate_user_thumbnail_shape.py  cloud_get_luau_execution_session_task_view.py  cloud_get_memory_store_flush_operation_scope.py  cloud_get_subscription_view.py  cloud_list_group_forum_posts_view.py  cloud_list_luau_execution_session_task_logs_view.py  (+1650 more)
templates/: client.py.jinja  endpoint_module.py.jinja  model.py.jinja  pyproject_uv.toml.jinja
(+724 files in other folders)
