[project]
name = "roblox-open-cloud-openapi"
version = "0.1.0"
description = "A client library for accessing Roblox API"
authors = [
    { name = "Ultrasonic1209", email = "ultra@ultras-playroom.xyz" },
]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "httpx2>=2.4.0,<3",
    "attrs>=22.2.0",
]

[tool.uv.build-backend]
module-name = "roblox_open_cloud_openapi"
module-root = ""

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
required-version = "~=0.11.21"

[tool.uv.sources]
openapi-python-client = { git = "https://github.com/Ultrasonic1209/openapi-python-client.git", rev = "09d83085d2c582e89525ce0123ecf07743f02510" }

[dependency-groups]
dev = [
    "openapi-python-client",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
